[package]
name = "particle_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
egui-macroquad = "0.17.3"
macroquad = { version = "0.4.14", features = ["glam-serde"] }
meval = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.3.3"
directories = "6.0.0"